--- a/results-summary-component-main/styles.css
+++ b/results-summary-component-main/styles.css
@@ -21,19 +21,32 @@ body{
     --paleblue: hsl(221, 100%, 96%);
     --llavender: hsl(221, 100%, 89%);
     --dgblue: hsl(224, 30%, 27%);
+    --custompurple: hsl(252, 94%, 86%);
 }
 
-#container{
+.inner-div,.small-div,#container,#circle,#bottom-div,#top-div{
     display: flex;
+}
+
+#container,#circle,#bottom-div,#top-div{
     flex-direction: column;
+}
+
+#top-div,#circle{
+    align-items: center;
+}
+
+#inner-p2,#p3{
+    color: var(--custompurple);
+}
+
+#inner-p1,#p2,#bottom-div h5{
+    font-weight: 700;
 }
 
 #top-div{
     text-align: center;
     flex-basis: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     background-image: linear-gradient(var(--lsblue),var(--lrblue));
     border-radius: 0 0 28px 28px;
     padding: 28px 45px;
@@ -48,9 +61,6 @@ body{
 }
 
 #circle{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
     height: 120px;
     width: 120px;
@@ -61,37 +71,30 @@ body{
 #inner-p1{
     font-size: 50px;
     color: white;
-    font-weight: 700;
 }
 
 #inner-p2{
     font-size: 13px;
-    color: hsl(252, 94%, 86%);
 }
 
 #p2{
     color: white;
     font-size: 1.5rem;
-    font-weight: 700;
     margin-bottom: 0;
 }
 
 #p3{
     font-size: 14px;
-    color: hsl(252, 94%, 86%);
 }
 
 #bottom-div{
     padding: 25px;
-    display: flex;
-    flex-direction: column;
     flex-basis: 50%;
 }
 
 #bottom-div h5{
     font-family: 'Hanken Grotesk', sans-serif;
     font-size: 1.1rem;
-    font-weight: 700;
     opacity: 0.8;
 }
 
@@ -102,7 +105,6 @@ body{
 .inner-div{
     padding: 14px;
     border-radius: 8px;
-    display: flex;
     align-items: center;
     justify-content: space-between;
 }
@@ -112,7 +114,6 @@ body{
 }
 
 .small-div{
-    display: flex;
     flex-direction: row;
 }
 
