--- a/faq-accordion-main/styles.css
+++ b/faq-accordion-main/styles.css
@@ -1,14 +1,32 @@
+body,#header,.q-and-a-div{
+    display: flex;
+}
+
+body,#header{
+    align-items: center;
+}
+
+.q-and-a-div,button{
+    cursor: pointer;
+}
+
+#container,button{
+    background-color: white;
+}
+
 body{
     background-color:#F9F0FF;
-    background-image: url('assets/images/background-pattern-mobile.svg');
+    background-image: url('images/background-pattern-desktop.svg');
     background-repeat: no-repeat;
     background-position: top;
     background-size: 100% ;
-    height: 100vh;
-    display: flex;
     justify-content: center;
-    align-items: center;
+    height: 100vh;
     font-family: 'Work Sans', sans-serif;
+}
+
+.hidden{
+    display: none;
 }
 
 p{
@@ -17,30 +35,19 @@ p{
 
 button{
     font-weight: 600;
-    background-color: white;
     border: none;
     text-align: left;
     max-width: 190px;
-}
-
-button:hover{
-    color: #9522a7;
-    cursor: pointer;
+    transition: 0.3s;
 }
 
 #container{
     flex-basis: 80%;
-    background-color: white;
     height: auto;
     width: auto;
     border-radius: 10px;
     padding: 8px 20px;
     max-width: 450px;
-}
-
-#header{
-    display: flex;
-    align-items: center;
 }
 
 #header img{
@@ -49,9 +56,14 @@ button:hover{
 }
 
 .q-and-a-div{
-    display: flex;
     justify-content: space-between;
     font-weight: 600;
+    cursor: pointer;
+}
+
+.q-and-a-div:hover button{
+    color: #9522a7;
+    transition: 0.3s;
 }
 
 .answer{
@@ -69,7 +81,7 @@ hr{
 
 @media(min-width:375px){
     body{
-        background-image: url('assets/images/background-pattern-desktop.svg');
+        background-image: url('images/background-pattern-mobile.svg');
         min-width: 100%;
     }
     button{
